@@ -4,6 +4,11 @@ QjackCtl - JACK Audio Connection Kit Qt GUI Interface
 ChangeLog
 
 
+GIT HEAD
+
+- Added a zoom slider control to the Graph view status bar.
+
+
 0.5.2  2018-05-27  Pre-LAC2018 release frenzy hotfix.
 
 - Respect ALSA Sequencer support option also on Graph view.
